// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviDetails Snapshot render 1`] = `
<div
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="poster"
      style={
        Object {
          "backgroundImage": "url(../../assets/images/poster.jpg)",
        }
      }
    />
    <div
      className="description"
    >
      <h2
        className="title"
      >
        Captain Marvel
      </h2>
      <h4
        className="details"
      >
        lorem lorem
      </h4>
      <div
        className="statistics"
      >
        <p
          className="year"
        >
          1984
        </p>
        <p
          className="duration"
        >
          152 m
        </p>
      </div>
      <p
        className="shortStory"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`MoviDetails Snapshot render without PosterPath 1`] = `
<div
  className="container"
>
  <div
    className="wrapper"
  >
    <div
      className="poster"
      style={
        Object {
          "backgroundImage": "url(test-file-stub)",
        }
      }
    />
    <div
      className="description"
    >
      <h2
        className="title"
      >
        Captain Marvel
      </h2>
      <h4
        className="details"
      >
        lorem lorem
      </h4>
      <div
        className="statistics"
      >
        <p
          className="year"
        >
          1984
        </p>
        <p
          className="duration"
        >
          152 m
        </p>
      </div>
      <p
        className="shortStory"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;
